--- a/LeaveSystem.WebUI/Views/Shared/_LayoutAccount.cshtml
+++ b/LeaveSystem.WebUI/Views/Shared/_LayoutAccount.cshtml
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="container">
         @if (TempData["userMessage"] != null)
         {
             <div class="alert alert-success">@TempData["userMessage"]</div>
