--- a/LeaveSystem.WebUI/Views/Account/Register.cshtml
+++ b/LeaveSystem.WebUI/Views/Account/Register.cshtml
@@ -7,9 +7,9 @@
 
 <!-- import DatePicker based on Bootstrap -->
 <!-- <script src="~/Scripts/bootstrap-datepicker.js"></script> -->
-
 @section CSS {
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+    
 }
 
 @section Scripts{
@@ -30,156 +30,137 @@
     </script>
 }
 
+@{
+    AjaxOptions ajaxOptsUser = new AjaxOptions
+    {
+        UpdateTargetId = "outcome",
+        Url = Url.Action("GetUserDataJson"),
+        OnSuccess = "processUserData"
+    };
+}
+
+
+
 @section Body{
-<h2>Register</h2>
+      
+<h2 class="form-signin-heading text-center">Create your account</h2>
+
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true)
-    <h3>User Information</h3>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.Username, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
+        @Html.LabelFor(u => u.Username, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
             @Html.TextBoxFor(u => u.Username, new { @class = "form-control", placeholder = "Username" })
+            <span id="outcome-username"></span>
         </div>
         @Html.ValidationMessageFor(u => u.Username)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.Password, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
+        @Html.LabelFor(u => u.Password, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
             @Html.PasswordFor(u => u.Password, new { @class = "form-control", placeholder = "Password" })
         </div>
         @Html.ValidationMessageFor(u => u.Password)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.PasswordCompare, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
+        @Html.LabelFor(u => u.PasswordCompare, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
             @Html.PasswordFor(u => u.PasswordCompare, new { @class = "form-control", placeholder = "Re-Password" })
         </div>
         @Html.ValidationMessageFor(u => u.PasswordCompare)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.DateOfBirth, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
+        @Html.LabelFor(u => u.DateOfBirth, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
             @Html.TextBoxFor(u => u.DateOfBirth, new { @class = "form-control date-picker", @Value = "", placeholder = "Date Of Birth" })
         </div>
         @Html.ValidationMessageFor(u => u.DateOfBirth)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.Gender, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
+        @Html.LabelFor(u => u.Gender, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
             @Html.DropDownListFor(u => u.Gender, new SelectList(Enum.GetNames(typeof(LeaveSystem.Domain.Entities.Gender))), new { @class = "form-control" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.Email, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Email, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Email, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Email, new { @class = "form-control", placeholder = "Email Address" })
         </div>
         @Html.ValidationMessageFor(u => u.Email)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(u => u.MobileNumber, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.MobileNumber, new { @class = "form-control" })
+        @Html.LabelFor(u => u.MobileNumber, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.MobileNumber, new { @class = "form-control", placeholder = "Mobile phone number" })
         </div>
+        @Html.ValidationMessageFor(u => u.MobileNumber)
     </div>
-    
+
     <div class="form-group">
-        @Html.LabelFor(u => u.Address.Line1, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Address.Line1, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Address.Line1, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Address.Line1, new { @class = "form-control", placeholder = "Address Line 1" })
         </div>
     </div>
-    
+
     <div class="form-group">
-        @Html.LabelFor(u => u.Address.Line2, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Address.Line2, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Address.Line2, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Address.Line2, new { @class = "form-control", placeholder = "Address Line 2" })
         </div>
     </div>
-    
+
     <div class="form-group">
-        @Html.LabelFor(u => u.Address.City, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Address.City, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Address.City, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Address.City, new { @class = "form-control", placeholder = "City name" })
         </div>
+        @Html.ValidationMessageFor(u => u.Address.City)
     </div>
-    
+
     <div class="form-group">
-        @Html.LabelFor(u => u.Address.PostCode, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Address.PostCode, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Address.PostCode, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Address.PostCode, new { @class = "form-control", placeholder = "Post Code" })
         </div>
+        @Html.ValidationMessageFor(u => u.Address.PostCode)
     </div>
-    
+
     <div class="form-group">
-        @Html.LabelFor(u => u.Address.StateName, new { @class = "col-md-3 control-label" })
-        <div class="col-md-5">
-            @Html.TextBoxFor(u => u.Address.StateName, new { @class = "form-control" })
+        @Html.LabelFor(u => u.Address.StateName, new { @class = "col-md-4 control-label" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(u => u.Address.StateName, new { @class = "form-control", placeholder = "State name" })
         </div>
+        @Html.ValidationMessageFor(u => u.Email)
     </div>
-    
+
     <div class="form-group">
         <div class="row">
-            <div class="col-md-5 col-md-offset-3">@Html.ValidationMessageFor(u => u.TermsAccepted)</div>
+            <div class="col-md-4 col-md-offset-4">@Html.ValidationMessageFor(u => u.TermsAccepted)</div>
         </div>
         <div class="row">
-            <div class="col-md-5 col-md-offset-3">
+            <div class="col-md-4 col-md-offset-4">
                 @Html.CheckBoxFor(u => u.TermsAccepted) <a href="#" data-toggle="modal" data-target="#myModal">I accept Terms and Conditions</a>
             </div>
         </div>
     </div>
 
-    /*
-     * @Html.TextBoxFor(u => u.DateOfBirth, new { @class = "form-control", type = "date" })
-     *
-    foreach (var property in ViewData.ModelMetadata.Properties)
-    {
-        if (property.PropertyName == "UserID")
-        {
-            continue;
-        }
-
-        if (property.PropertyName == "Password")
-        {
-            <div class="form-group">
-                @Html.LabelFor(u=>u.Password)
-                @Html.PasswordFor(u => u.Password, new { @class = "form-control" })
-            </div>
-
-            continue;
-        }
-
-        if (property.PropertyName == "Gender")
-        {
-            <div class="form-group">
-                @Html.LabelFor(u=>u.Gender)
-                @Html.DropDownListFor(u => u.Gender, new SelectList(Enum.GetNames(typeof(LeaveSystem.Domain.Entities.Gender))))
-            </div>
-
-            continue;
-        }
-
-        //if (property.PropertyName != "Gender" && property.PropertyName != "UserID")
-        //{
-            <div class="form-group">
-                 <label>@(property.DisplayName ?? property.PropertyName)</label>
-                 @Html.TextBox(property.PropertyName, null, new {@class = "form-control"})
-            </div>
-        //}
-    }
-    */
     <div class="text-center">
-        <input class="btn btn-primary" type="submit" value="Register" />
+        @Html.ActionLink("Sign in", "Login", new { controller = "Account" }, new { @class = "btn btn-info" })
+        <input class="btn btn-primary" type="submit" value="Submit" />
     </div>
-}
+}            
+
+
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
