--- a/LeaveSystem.WebUI/Views/Home/GetPeople.cshtml
+++ b/LeaveSystem.WebUI/Views/Home/GetPeople.cshtml
@@ -18,6 +18,7 @@
     
 }
 
+@section Scripts{
 <script type="text/javascript">
     function processData(data) {
         var target = $("#tableBody");
@@ -44,7 +45,9 @@
 
     }
 </script>
+    }
 
+@section Body{
 <h2>GetPeople</h2>
 
 <div id="loading" class="load" style="display:none">
@@ -94,3 +97,4 @@
             //$("#helloworld").submit();
         })
     </script>
+    }
